# broomstyx

./: .gitignore  AUTHORS  CMakeLists.txt  config.h.cmake  config.h.in  config.opts  dune.module  rebuild-broomstyx.sh  rebuild-dune-branch.sh  runCMake.sh  runCMake.sh_example
cmake/Modules/: FindMKL.cmake  FindViennaCL.cmake
cmake/modules/: CMakeLists.txt
src/: main.cpp
src/BasisFunctions/: Line_P1.cpp  Line_P1.hpp  Line_P2.cpp  Line_P2.hpp  Quadrilateral_P1_2.cpp  Quadrilateral_P1_2.hpp  Quadrilateral_P2_3.cpp  Quadrilateral_P2_3.hpp  Quadrilateral_P2_4.cpp  Quadrilateral_P2_4.hpp  Quadrilateral_S2.cpp  Quadrilateral_S2.hpp  ScalarBasisFunction.cpp  ScalarBasisFunction.hpp  Tetrahedron_P1.cpp  Tetrahedron_P1.hpp  Triangle_P1.cpp  Triangle_P1.hpp  Triangle_P2.cpp  Triangle_P2.hpp
src/Core/: AnalysisModel.cpp  AnalysisModel.hpp  BoundaryCondition.cpp  BoundaryCondition.hpp  Cell.cpp  Cell.hpp  Diagnostics.cpp  Diagnostics.hpp  Dof.hpp  DofManager.cpp  DofManager.hpp  DomainManager.cpp  DomainManager.hpp  DuneExtensions.hpp  EvalPoint.hpp  FieldCondition.cpp  FieldCondition.hpp  InitialCondition.cpp  InitialCondition.hpp  LoadStep.cpp  LoadStep.hpp  MaterialManager.cpp  MaterialManager.hpp  Node.cpp  Node.hpp  NumericsManager.cpp  NumericsManager.hpp  ObjectFactory.cpp  ObjectFactory.hpp  OutputManager.cpp  OutputManager.hpp  SolutionManager.cpp  SolutionManager.hpp  TimeData.hpp
src/IntegrationRules/: IntegrationRule.cpp  IntegrationRule.hpp  Legendre_1D.cpp  Legendre_1D.hpp  Legendre_2D_Quad.cpp  Legendre_2D_Quad.hpp  Legendre_2D_Tri.cpp  Legendre_2D_Tri.hpp
src/LinearSolvers/: .ISTL.hpp.swp  ISTL.cpp  ISTL.hpp  LinearSolver.cpp  LinearSolver.hpp  MKL_Pardiso.cpp  MKL_Pardiso.hpp  UB_Pardiso.cpp  UB_Pardiso.hpp  ViennaCL_cuda.cu  ViennaCL_cuda.hpp
src/Materials/: Material.cpp  Material.hpp
src/Materials/General/: Density.cpp
src/Materials/HeatTransfer/: HeatCapacity.cpp  HeatCapacity.hpp  IsotropicThermalConductivity.cpp  IsotropicThermalConductivity.hpp
src/MeshReaders/: DuneGrid_GmshReader.cpp  DuneGrid_GmshReader.hpp  GmshReader.cpp  GmshReader.hpp  MeshReader.hpp
src/Numerics/: Numerics.cpp  Numerics.hpp
src/Numerics/FluidFlow/: DarcyFlow_2D_1Phase_Fv_Tri.cpp  DarcyFlow_2D_1Phase_Fv_Tri.hpp
src/Numerics/HeatTransfer/: HeatTransfer_Fe_Tri3.cpp  HeatTransfer_Fe_Tri3.hpp
src/Numerics/Mechanics/: Mech_Fe_Tet4.cpp  Mech_Fe_Tet4.hpp  PhaseFieldFracture_FeFv_Tri3.cpp  PhaseFieldFracture_FeFv_Tri3.hpp  PhaseFieldFracture_Fe_Tri3.cpp  PhaseFieldFracture_Fe_Tri3.hpp  PlaneStrain_Fe_CrackTip.cpp  PlaneStrain_Fe_CrackTip.hpp  PlaneStrain_Fe_Quad8.cpp  PlaneStrain_Fe_Quad8.hpp  PlaneStrain_Fe_Tri3.cpp  PlaneStrain_Fe_Tri3.hpp  PlaneStrain_Fe_Tri6.cpp  PlaneStrain_Fe_Tri6.hpp  (+2 more)
src/OutputQuantities/: BoundaryReaction.cpp  BoundaryReaction.hpp  CellFieldOutput.cpp  CellFieldOutput.hpp  DomainIntegral.cpp  DomainIntegral.hpp  JIntegral.cpp  JIntegral.hpp  JIntegral_Elastic.cpp  JIntegral_Elastic.hpp  OutputQuantity.hpp  SIF_Elastic_QPE.cpp  SIF_Elastic_QPE.hpp  SolutionAtNode.cpp  SolutionAtNode.hpp  StVenantTorsion_ErrNorm_WarpFcn.cpp  StVenantTorsion_ErrNorm_WarpFcn.hpp  WeightedSum.cpp  WeightedSum.hpp
src/OutputWriters/: Gmsh.cpp  Gmsh.hpp  OutputWriter.hpp  Paraview.cpp  Paraview.hpp  Paraview_DD.cpp  Paraview_DD.hpp
src/SolutionMethods/: AlternateMinimization.cpp  AlternateMinimization.hpp  AlternateNonlinearMinimization.cpp  AlternateNonlinearMinimization.hpp  LinearStatic.cpp  LinearStatic.hpp  LinearTransient.cpp  LinearTransient.hpp  NewtonRaphson.cpp  NewtonRaphson.hpp  SolutionMethod.cpp  SolutionMethod.hpp  TransientAlternateMinimization.cpp  TransientAlternateMinimization.hpp  TransientAlternateNonlinearMinimization.cpp  TransientAlternateNonlinearMinimization.hpp
src/SparseMatrix/: .SparseMatrix.hpp.swp  CSR0.cpp  CSR0.hpp  CSR1.cpp  CSR1.hpp  ISTLMat.cpp  ISTLMat.hpp  SparseMatrix.cpp  SparseMatrix.hpp
src/User/: UserFunction.hpp
src/Util/: RealMatrix.hpp  RealVector.hpp  StackRealMatrix.hpp  StackRealVector.hpp  linearAlgebra.cpp  linearAlgebra.hpp  readOperations.cpp  readOperations.hpp  reductions.hpp  stackLinearAlgebra.hpp
tests/: RealMartrix_class_implementation.cpp  RealVector_class_implementation.cpp  StackRealMatrix_class_implementation.cpp  StackRealVector_class_implementation.cpp  directBlasCalls.cpp  linear_algebra.cpp  openmp_userDefinedReduction.cpp  test.hpp  test_stack_linear_algebra.cpp
(+68 files in other folders)
